ingress/gateway-api/httproute-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE_NAME}-arches-https
  namespace: istio-ingress
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: istio-ingress
      sectionName: ${GATEWAY_HTTPS_SECTION}
  hostnames:
    - ${DOMAIN_NAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /en/api/
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-http
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-http
          namespace: ${NAMESPACE}
          port: 80
