ingress/gateway-api/httproute-media.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE_NAME}-arches-https-media
  namespace: istio-ingress
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: istio-ingress
      sectionName: ${GATEWAY_HTTPS_SECTION}
  hostnames:
    - ${DOMAIN_NAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /media/
      backendRefs:
        - name: s3-gateway
          namespace: ${NAMESPACE}
          port: 80
