ingress/gateway-api/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE_NAME}-arches-http-redirect
  namespace: istio-ingress
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: istio-ingress
      sectionName: ${GATEWAY_HTTP_SECTION}
  hostnames:
    - ${DOMAIN_NAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
