ingress/gateway-api/httproute-static.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE_NAME}-arches-https-static
  namespace: istio-ingress
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: istio-ingress
      sectionName: ${GATEWAY_HTTPS_SECTION}
  hostnames:
    - ${DOMAIN_NAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /static/build
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /build
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/img
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /static/img
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/node_modules
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /static/node_modules
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/css/node_modules
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /static/node_modules
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/css
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /static/css
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/js
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /js
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ${RELEASE_NAME}-archesproject-static
          namespace: ${NAMESPACE}
          port: 80
